# kaggle-titanic

./: .gitignore  README.md  my_submission.csv  pyproject.toml
src/: train.py
