[project]
name = "kaggle-titanic"
version = "0.1.0"
description = "Learning how to compete in Kaggle competitions"
authors = [
    { name = "makinzm", email = "invalid@invalid.invalid" }
]
dependencies = [
    "ruff>=0.5.7",
    "polars>=1.4.1",
    "pandas>=2.2.2",
    "pylyzer>=0.0.58",
    "hydra-core>=1.3.2",
    "wandb>=0.17.6",
    "lightgbm>=4.5.0",
    "optuna>=3.6.1",
    "matplotlib>=3.9.1.post1",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = []

